# ramplefish

./: .gitignore  rample.py  readme.md  sample_instance_config.json  setup.cfg
adapters/: adapter.py
runners/: individual.py
