[metadata]
name = ramplefish
version = 0.1.0
description = Remotely run code in SDVI Rally environments
long_description = file: readme.md
license = GPL-3
author = Mehron Kugler
author_email = mkugler@member.fsf.org
maintainer = Mehron Kugler
url = https://github.com/mehronkugler/ramplefish

[options]
packages = rample
install_requires =
  requests >= 2.24.0

[options.entry_points]
console_scripts =
    rample = rample:main
